--- a/main page/css/style.css
+++ b/main page/css/style.css
@@ -184,8 +184,8 @@ section {
   left: 0;
   right: 0;
   bottom: 0;
-  width: 273px;
-  height: 385px;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.6);
   color: #fff;
   padding: 15px;
@@ -268,7 +268,7 @@ section {
   height:100%;
   width: 100%;
   max-width:100%;
- border: 3px solid #ffffff;
+  border: 3px solid #ffffff;
 }
 
 
