--- a/main page/css/style.css
+++ b/main page/css/style.css
@@ -210,6 +210,7 @@ section {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+    display: flex;
 }
 .artists .artists-text_mobile {
   font-size: 15px;
@@ -217,7 +218,7 @@ section {
   border-top: 1px solid rgba(179, 179, 179, 0.7);
   margin-top: 5px;
   padding-top: 2px;
-  display: none;
+  display: flex;
 }
 .artists.active .artists-text_mobile {
   display: block;
