--- a/main page/css/style.css
+++ b/main page/css/style.css
@@ -301,8 +301,97 @@ section {
   margin-top: 250px;
 }
 
+.metro{
+   
+  margin-bottom: -5px;
+
+}
+
+.description {
+    text-align: center;
+    font-size: 26px;
+    color: beige;
+    font-weight: 300;
+    padding-top: 15px;
+    padding-bottom: 30px;
+}
 
 
+.contacts3 {
+    padding: 10px 10px;
+    margin-left: 105px;
+    display: flex;
+}
 
 
+.contact {
+    flex: 1 1 0;
+    position: relative;
+    padding-left: 5px;
+}
 
+
+.icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.icon_title {
+    color: beige;
+    margin-left: 78px;
+}
+
+.icon_text {
+    font-size: 15px;
+    color: beige;
+    margin-left: 78px;
+}
+
+.icon1 {
+    position: absolute;
+    top: -18px;
+    left: 0;
+    z-index: 1;
+}
+
+.icon_title1 {
+    color: beige;
+    margin-left: 98px;
+}
+
+.icon_text1 {
+    color: beige;
+    margin-left: 98px;
+    font-size: 15px;
+}
+
+.contact {
+    flex: 1 1 0;
+    position: relative;
+    padding-left: 5px;
+}
+
+.contacts3 {
+    padding: 10px 10px;
+    margin-left: 105px;
+    display: flex;
+}
+
+
+.down_text {
+    text-align: center;
+    font-size: 12px;
+    color: beige;
+    font-weight: 300;
+    padding-top: 50px;
+    padding-bottom: 5px;
+}
+
+.contacts {
+    padding: 10px 10px;
+    background: #323131;
+    display: block;
+    padding-bottom: 10px;
+}
