--- a/main page/css/style.css
+++ b/main page/css/style.css
@@ -307,6 +307,7 @@ section {
 
 }
 
+*
 {
 	padding: 0;
 	margin: 0;
@@ -319,6 +320,14 @@ section {
   margin: 0 auto;
   display:flex;
   justify-content: space-between;
+}
+
+.title
+{
+  font-size: 30px;
+  font-family: sans-serif;
+  text-align: center;
+  margin-bottom: 50px;
 }
 
 .item
@@ -353,8 +362,10 @@ section {
   font-family: sans-serif;
   color: #ffffff;
   padding: 20px;
-  background-color: grey;
+  background-color: black;
 }
+
+
 
 
 
