--- a/main page/css/style.css
+++ b/main page/css/style.css
@@ -51,17 +51,13 @@ body {
   font-family: 'Montserrat', sans-serif;
     
 }
-body .fullscreen {
-  z-index: -2;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 100% ;
+body {
+    background-image: url('../img/arhitektura_nebo_chb_138510_1920x1080.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height:100%;
 }
 section {
   display: -webkit-box;
@@ -156,8 +152,6 @@ section {
   display: flex;
 }
 
-
-
 .artists,
 .artists * {
   box-sizing: border-box;
@@ -243,6 +237,7 @@ section {
   -ms-transform: scale(1);
   transform: scale(1);
 }
+
 
 
 *
