--- a/main page/css/style.css
+++ b/main page/css/style.css
@@ -53,11 +53,12 @@ body {
 }
 body {
     background-image: url('../img/arhitektura_nebo_chb_138510_1920x1080.jpg');
+    background-position: center center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
-    background-position: center;
-    width: 100%;
-    height:100%;
+   
+    
 }
 section {
   display: -webkit-box;
