--- a/main page/css/style.css
+++ b/main page/css/style.css
@@ -296,125 +296,104 @@ section {
 
 }
 
-*
-{
-	padding: 0;
-	margin: 0;
-	border: 0;
+
+* {
+
+margin: 0;
+
+padding: 0;
+
+-webkit-transition: all 0.5s ease;
+
+-moz-transition: all 0.5s ease;
+
+transition: all 0.5s ease;
+
 }
 
-.slider__inner
-{
-  max-width: 1140px;
-  margin: 0 auto;
-  display:flex;
-  justify-content: space-between;
+#slider_box > ul > li {
+
+float: left;
+
+display: block;
+
+height: 150px;
+
 }
 
-.title
-{
-  font-size: 30px;
-  font-family: sans-serif;
-  text-align: center;
-  margin-bottom: 50px;
+#slider_box > ul {
+
+overflow: hidden;
+
+width: 1000%;
+
 }
 
-.item
-{
-  background-color: #ffffff;
-  border:  10px double #000000;
+#slider_box {
+
+overflow: hidden;
+
+position: relative;
+
+left: 30px;
+
 }
 
-.item__img
-{
-  width: 45px;
-  height: 45px;
-  background-color: #ffffff;
-  border: 1px solid #000000;
-  border-radius: 50%;
+#left_nav {
+
+float: left;
+
+padding-top: 14px;
+
 }
 
-.item__header
-{
-  display: flex;
-  margin-bottom: 20px;
+#nav_slider > div {
+
+width: 30px;
+
+height: 30px;
+
 }
 
-.item__title
-{
-  margin-left: 20px;
+#right_nav {
+
+float: right;
+
+padding-top: 15px;
+
 }
 
-.item__inner
-{
-  font-size: 20px;
-  font-family: sans-serif;
-  color: #ffffff;
-  padding: 20px;
-  background-color: grey;
+#nav_slider {
+
+overflow: hidden;
+
+position: relative;
+
+top: -105px;
+
 }
 
+#slider {
 
+background-color: #efe6e6;
 
+overflow: hidden;
 
-*
-{
-	padding: 0;
-	margin: 0;
-	border: 0;
+width: 680px;
+
+padding-left: 310px;
+
+padding-right: 310px;
+
 }
 
-.slider__inner
-{
-  max-width: 1140px;
-  margin: 0 auto;
-  display:flex;
-  justify-content: space-between;
-}
+#slider img {
 
-.title
-{
-  font-size: 30px;
-  font-family: sans-serif;
-  text-align: center;
-  margin-bottom: 50px;
-}
+height: 100%;
 
-.item
-{
-  background-color: #ffffff;
-  border:  10px double #000000;
-}
+width: 100%;
 
-.item__img
-{
-  width: 45px;
-  height: 45px;
-  background-color: #ffffff;
-  border: 1px solid #000000;
-  border-radius: 50%;
 }
-
-.item__header
-{
-  display: flex;
-  margin-bottom: 20px;
-}
-
-.item__title
-{
-  margin-left: 20px;
-}
-
-.item__inner
-{
-  font-size: 20px;
-  font-family: sans-serif;
-  color: #ffffff;
-  padding: 20px;
-  background-color: black;
-}
-
 
 
 
