--- a/main page/css/style.css
+++ b/main page/css/style.css
@@ -19,6 +19,7 @@
   font-display: swap;
   src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459W1hzg.ttf) format('truetype');
 }
+
 @font-face {
   font-family: 'Raleway';
   font-style: italic;
@@ -44,22 +45,23 @@
   font-weight: bold;
   font-style: normal;
 }
-
-
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-    
 }
-body {
-    background-image: url('../img/arhitektura_nebo_chb_138510_1920x1080.jpg');
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-   
-    
+body .fullscreen {
+  z-index: -2;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100% ;
 }
+
 section {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -296,104 +298,80 @@ section {
 
 }
 
-
-* {
-
-margin: 0;
-
-padding: 0;
-
--webkit-transition: all 0.5s ease;
-
--moz-transition: all 0.5s ease;
-
-transition: all 0.5s ease;
-
+.text_about {
+    text-align: center;
+    font-size: 30px;
+    color: #323131;
+    font-weight: 500;
+    padding-top: 15px;
+    padding-bottom: 30px;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+
 #slider_box > ul > li {
-
-float: left;
-
-display: block;
-
-height: 150px;
-
+    float: left;
+    display: block;
+    height: 150px;
 }
 
 #slider_box > ul {
-
-overflow: hidden;
-
-width: 1000%;
-
+    overflow: hidden;
+    width: 1000%;
 }
 
 #slider_box {
-
-overflow: hidden;
-
-position: relative;
-
-left: 30px;
-
+    overflow: hidden;
+    position: relative;
+    left: 30px;
+    justify-content: space-between;
 }
 
 #left_nav {
-
-float: left;
-
-padding-top: 14px;
-
+    float: left;
+    padding-top: 14px;
 }
 
 #nav_slider > div {
-
-width: 30px;
-
-height: 30px;
-
+    width: 30px;
+    height: 30px;
 }
 
 #right_nav {
-
-float: right;
-
-padding-top: 15px;
-
+    float: right;
+    padding-top: 14px;
+  
 }
 
 #nav_slider {
-
-overflow: hidden;
-
-position: relative;
-
-top: -105px;
-
+    overflow: hidden;
+    position: relative;
+    top: -105px;
 }
 
 #slider {
-
-background-color: #efe6e6;
-
-overflow: hidden;
-
-width: 680px;
-
-padding-left: 310px;
-
-padding-right: 310px;
-
+   
+    overflow: hidden;
+    width: 680px;
+    padding-left: 310px;
+    padding-right: 310px;
 }
 
 #slider img {
-
-height: 100%;
-
-width: 100%;
-
+    height: 100%;
+    width: 100%;
+    
 }
+
+
+
 
 
 
